<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPhoto">

    <ImageButton
        android:id="@+id/infoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about2" />

    <FrameLayout
        android:id="@+id/viewImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutTool"
        app:layout_constraintTop_toBottomOf="@+id/infoImage">

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photoEditor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

        </ja.burhanrashid52.photoeditor.PhotoEditorView>

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/cropImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible">

        </com.theartofdev.edmodo.cropper.CropImageView>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/share" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/edit" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/delete2" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/infoImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/save" />

    <TextView
        android:id="@+id/txtCrop"
        android:layout_width="74dp"
        android:layout_height="61dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/abc"
        android:text="@string/Crop"
        android:textSize="30dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayoutTool"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/toolEditPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnCrop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/crop" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:src="@drawable/text" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnSticker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnPaint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/paint" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/lnPaint"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="99dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/txtBrush"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Brush" />

            <SeekBar
                android:id="@+id/sbSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:progress="25"
                android:visibility="visible" />

            <SeekBar
                android:id="@+id/sbEaser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:progress="25"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imgEraser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/eraser" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/txtOpacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Opacity" />

            <SeekBar
                android:id="@+id/sbOpacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:progress="100" />

            <ImageView
                android:id="@+id/imgColors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/colorpalete" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/undoAndRedo"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@id/frameLayoutTool"
        app:layout_constraintTop_toBottomOf="@id/viewImage">
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/white"/>
        <ImageView
            android:id="@+id/imgUndo"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/undo" />

        <ImageView
            android:id="@+id/imgRedo"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/redo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>